fix: adjusted margin and gap values to remove x scrollbar in any with

--- a/style/summary_login/login.css
+++ b/style/summary_login/login.css
@@ -98,11 +98,11 @@
 .login-form {
     width: 100%;
     max-width: 432px;
-    margin-top: 35px;
+    margin-top: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 32px;
+    
 }
 
 .input-wrapper {
