--- a/style/summary_login/signup_responsive.css
+++ b/style/summary_login/signup_responsive.css
@@ -27,7 +27,7 @@
     }
 
     .signup-card.signup-card {
-        margin-top: 40px;
+        margin-top: 28px;
     }
 
     .back-arrow.back-arrow {
